# EWU-CSCD488-490-Senior-Project

./: .env  .gitignore  Cargo.toml  README.md  secret.example.config.toml  server.config.toml  server.example.config.toml
.github/workflows/: make_release.yml  rust.yml
Doc/: README.md  repo_layout.md
Doc/API/: APIDOC.md  api.http  root.http
Doc/Database/: DATABASE_SETUP_DOCUMENTS.md  README.md  (+2 more)
adminpage/: Cargo.toml  index.html
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: api.rs  api_services.rs  mod.rs  token.rs
backend/src/email/: mod.rs  team.rs  test.rs
common/: Cargo.toml
database/: Cargo.toml
database/migrations/2023-05-16-234404_create_posts/: down.sql
database/src/: lib.rs
database/src/cli/: args.rs
database/src/repository/: database.rs  database_to_common.rs  db.rs  db_connector.rs  mod.rs  models.rs
database/src/repository/ops/: individual_report_ops.rs  mod.rs  requirements_ops.rs  sprint_ops.rs  team_activities_ops.rs  team_report_ops.rs  user_ops.rs
dbcli/: Cargo.toml
dbcli/src/: main.rs
helper_scripts/: README.md  build.sh  build_code_doc.sh  clean.sh  dev_db_setup.sh  dev_run_local.sh  dev_run_on_aws.sh  dev_rust_setup.sh  lint.sh  lint_warnings.sh  package.sh  run.sh  srs-actix.service
res/: index.html  studentpage-46a4203c5131248f.js
studentpage/: Cargo.toml  Truck.toml  index.html
studentpage/src/: IndividualReport.rs  lib.rs  main.rs
studentpage/src/api/: base_api_uri.txt  mod.rs
studentpage/src/assets/: main.css
studentpage/src/components/: activity_accounting.rs  button.rs  calendar.rs  card.rs  collapse.rs  collapsible.rs  footer.rs  form.rs  individual_form.rs  instructions.rs  mod.rs  modal.rs  msgbox.rs  navbar.rs  range.rs  requirement.rs  sprint.rs  team_form.rs  text_area.rs  time_accounting.rs
studentpage/src/components/atoms/: button.rs  collapse.rs  collapsible.rs  instructions.rs  mod.rs  range.rs  sprint.rs  text_area.rs
studentpage/src/components/molecules/: activity_accounting.rs  calendar.rs  footer.rs  individual_form.rs  mod.rs  msgbox.rs  navbar.rs  team_form.rs  time_accounting.rs
studentpage/src/components/pages/: home.rs  individual_report.rs  login.rs  page_not_found.rs  requirements.rs  team_report.rs
studentpage/src/pages/: calendar.rs  home.rs  individual_report.rs  login.rs  mod.rs  page_not_found.rs  requirements.rs  submit_team_report.rs  team_report.rs
studentpage/src/stores/: individual_store.rs  mod.rs  requirements_store.rs  team_store.rs
(+371 files in other folders)
