[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["openssl"] }
actix-files = "0.6.2"
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.13.3"
log = "0.4.17"
openssl = { version = "0.10.52", features = ["v110"] }
serde = { version = "1.0.163", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4"] }
env_logger = "0.10.0" # Find a better option
oauth2 = "4.2"
lettre = "0.10"
common = { path = "../common" }
database = { path = "../database"}