[package]
name = "dbcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
common = { path = "../common" }
database = { path = "../database"}
dotenv = "0.15.0"
diesel = { version ="2.0.1", features=["mysql","chrono"]}