[package]
name = "studentpage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
yew-router = "0.17" 
yew = { version = "0.20.0", features = ["csr"] }
common = { path = "../common" }
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"
gloo = "0.8.0"