[package]
name = "studentpage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.25"
yew-router = "0.17" 
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9.2"
serde = "1.0.163"
serde_json = "1.0.96"
common = { path = "../common" }
wasm-bindgen = "0.2.86"
web-sys = { version = "0.3.63", features = ["HtmlInputElement"] }
gloo = "0.8.0"
stylist = {version = "0.12.0", features = ["yew", "parser"] }
wasm-bindgen-futures = "0.4.36"
reqwasm = "0.5.0"
yew-oauth2 = "0.6.1"